# yusuf-grondona-entropy

./: .gitignore  Agent_Decision_Logic  Cluster-Guild_with_Ijara_as_Evolutionary_Biology.txt  Insurance_Architecture_of_the_Cluster-Guild.txt  Model_Equation_Snippet  README.md  Requirements.txt  Ricci_flow.py  SadaqaAgent  Streamlit_app.py  The_Evolutionary_Game_Theory_Insight.txt  Track_Scarcity_Cycles  Trust_Network_Dynamics  bash  decide_to_give  grondona_crd.py  kharaj.txt  neurocognitive_agents.py  parameters_sadaqa_simulation  sadaqa-gift-economy  sadaqa_bri_simulation.py  sadaqa_simulation.py  spatial_infrastructure_ga.py  statistical_validation.py  two_simulation  urban_business_fabric.py  yusuf_ga_learning.py  yusuf_model.py
.github/workflows/: main.yml
.github/workflows/.github/workflows/: test.yml
.github/workflows/.github/workflows/tests/: test_basics.py
.github/workflows/.github/workflows/tests/tests/: pyproject.toml
currency_aesthetics/: README.md  generate_currency_art.py
currency_aesthetics/love_token_pcb/: README.md
github/workflows/: test.yml
github/workflows/tests/: pyproject.toml  test_basics.py
src/: ricci_yusuf_network.py
src/economy/: two_currency.py  van_der_waals.py
src/geometry/: mesa_ricci_advanced.py  mesa_ricci_network.py  psychological_ricci_network.py
src/learning/: ago_antagonistic.py
src/validation/: thermodynamic_metrics.py
tests/: test_shock_resilience.py
