[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yusuf-grondona-entropy"
version = "1.0.0"
description = "Yusuf Counter-Cycle Model - Bimetallic alternative to debt-based money"
readme = "README.md"
license = { text = "CC BY-SA 4.0" }
authors = [
    { name = "Marc Daghar", email = "marcdaghar@protonmail.com" }
]
maintainers = [
    { name = "Marc Daghar", email = "marcdaghar@protonmail.com" }
]
keywords = [
    "economics", "counter-cyclical", "bimetallism", "agent-based-modeling",
    "grondona", "ricci-flow", "islamic-finance", "complex-systems"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: CC BY-SA 4.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Economics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
]
notebook = ["jupyter>=1.0", "ipykernel>=6.0"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=1.0"]

[project.urls]
"Homepage" = "https://github.com/marcdaghar/yusuf-grondona-entropy"
"Repository" = "https://github.com/marcdaghar/yusuf-grondona-entropy.git"
"Issues" = "https://github.com/marcdaghar/yusuf-grondona-entropy/issues"
"Paper" = "https://github.com/marcdaghar/yusuf-grondona-entropy/blob/main/yusuf_paper.pdf"

[project.scripts]
yusuf-run = "yusuf_model:main"
yusuf-streamlit = "streamlit_app:run"
yusuf-validate = "statistical_validation:main"

[tool.setuptools]
packages = ["."]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.txt", "*.md"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # mccabe complexity
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false  # Mis à false pour faciliter l'adoption

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
]
fail_under = 70
